--- a/wiki/milestones.wiki
+++ b/wiki/milestones.wiki
@@ -10,7 +10,7 @@ The client and server each have their own version numbers that are not going to 
 
 Currently we are working towards milestone version 0.1
 
-== Version 0.0 - reached ==
+== Version 0.0 - complete ==
 
 Up to version 0.1 we are working on the basic framework for both the server and the client. When done we should essentially have a "chat" system.
 
@@ -23,10 +23,10 @@ Up to version 0.1 we are working on the basic framework for both the server and 
   * ~~client is capable of connecting to server~~
   * ~~client is capable of logging into server with username~~
   * ~~client is capable of sending and receiving basic chat commands~~
-  * client is capable of displaying chat information so players can chat with each other
+  * ~~client is capable of displaying chat information so players can chat with each other~~
 
 
-== Version 0.1 - in progress ==
+== Version 0.1 - reached ==
 
 Version 0.1 to version 0.2 will focus on the map system. When done the server will be able to send map data to the client and the client will be able to display it properly and allow players to view it.
 
@@ -39,7 +39,7 @@ Version 0.1 to version 0.2 will focus on the map system. When done the server wi
   * client is capable of displaying map data
   * client is capable of dragging the map around so that the entire map can be seen
 
-== Version 0.2 - pending ==
+== Version 0.2 - in progress ==
 
 Version 0.2 to 0.3 will focus on actual gameplay. By the end the game should be technically playable and we will have reached alpha stage.
 
